...
    <string name="add">Add</string>
    <string name="percentage_sign">%</string>
    <string name="next">Next</string>
    <string name="continue_btn_text">Continue</string>
    <string name="back"><u>Back</u></string>
    <string name="use">Use</string>
    <string name="ok_btn">OK</string>
    <string name="add_name_title">Please add name 💰</string>
    <string name="add_name_btn">Add name</string>
    <string name="add_food_list">Add food list</string>
    <string name="add_name">Add name</string>
    <string name="name">Name</string>
    <string name="person_count">/%d</string>
...
    <string name="cancel">Cancel</string>
    <string name="percentage_or_amount_toggle_title">Percentage or Amount</string>
    <string name="percentage_message">Percentage</string>
    <string name="amount_message">Amount</string>
    <string name="percentage_exceeded_alert_message">Percentage cannot exceed 100%</string>
    <string name="discount_exceeded_alert_message">Discount cannot exceed total food price</string>
    <string name="next_btn_alert_title">Next Page</string>
    <string name="next_btn_alert_message">Are you sure you want to continue?</string>
    <string name="yes_btn">Yes</string>
    <string name="no_btn">No</string>
    <string name="incomplete_card_letter_or_num_message">Please use only letters or numbers for the food name</string>
    <string name="incomplete_card_num_only_message">Please use at least one letter for the food name</string>
    <string name="incomplete_card_empty_message">Please fill in both name and price for all items</string>
    <string name="incomplete_card_zero_message">Price cannot be zero</string>
    <string name="incomplete_card_zero_chip_message">Please select at least one name per food item</string>
    <string name="incomplete_card_at_least_1_message">Please have at least 1 item to continue!</string>
    <string name="confirm_delete_title">Delete Item</string>
    <string name="confirm_delete_message">Are you sure you want to delete this item?</string>
    <string name="confirm_delete_all_title">Delete All Items</string>
    <string name="confirm_delete_all_message">Are you sure you want to delete all items?</string>
    <string name="duplicate_name_alert_title">Duplicate Name</string>
    <string name="duplicate_name_alert_message">Please ensure all names are unique before continuing</string>
    <string name="incomplete_empty_card_message_2">Please fill in the name</string>
    <string name="incomplete_letter_or_num_message_2">Please use only letters or numbers for the name</string>
    <string name="incomplete_card_num_only_message_2">Please use at least one letter for the name</string>
    <string name="item_limit_exceeded_title">Item Limit Exceeded</string>
    <string name="item_limit_exceeded_message">Item cannot exceed %1$d items</string>

    // vat sc dis total field
    <string name="total_amount">Total Amount</string>
    <string name="service_charge">Service Charge</string>
    <string name="vat">VAT</string>
...
