<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".addnamelist.AddNameListFragment">

    <LinearLayout
        android:id="@+id/btnAddNameListContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/space_05dp"
        android:orientation="horizontal"
        android:paddingHorizontal="@dimen/space_32dp"
        app:layout_constraintBottom_toTopOf="@id/tvNameListPageDescription"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnAddNameList"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/space_35dp"
            android:layout_marginEnd="@dimen/space_11dp"
            android:background="@drawable/rounded_corner_green_button"
            android:drawableStart="@drawable/baseline_add_24"
            android:fontFamily="@font/font_zen_maru_gothic"
            android:paddingHorizontal="@dimen/space_06dp"
            android:text="@string/add_name"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_16sp"
            android:textStyle="bold" />

        <ImageButton
            android:id="@+id/btnGroupAddNameList"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/rounded_corner_green_button"
            android:src="@drawable/baseline_keyboard_double_arrow_down_35"
            tools:ignore="ContentDescription" />
    </LinearLayout>

    <TextView
        android:id="@+id/tvNameListPageDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/font_zen_maru_gothic"
        android:paddingHorizontal="@dimen/space_32dp"
        android:text="@string/text_name_page_description"
        android:textColor="@color/colorBlue0640FF"
        android:textSize="@dimen/text_size_09sp"
        app:layout_constraintTop_toBottomOf="@id/btnAddNameListContainer" />

    <TextView
        android:id="@+id/tvDeleteAllNameList"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginEnd="@dimen/space_25dp"
        android:fontFamily="@font/font_zen_maru_gothic"
        android:text="@string/delete_all_button"
        android:textColor="@color/red"
        android:textSize="@dimen/text_size_16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvNameListPageDescription" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvNameList"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toTopOf="@id/footer"
        app:layout_constraintTop_toBottomOf="@id/tvDeleteAllNameList"
        tools:itemCount="5"
        tools:listitem="@layout/name_list_card" />


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/footer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_footer"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnNext"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/space_35dp"
            android:layout_margin="@dimen/space_35dp"
            android:background="@drawable/rounded_corner_yellow_button"
            android:drawableStart="@drawable/baseline_double_arrow_24"
            android:fontFamily="@font/font_zen_maru_gothic"
            android:paddingHorizontal="@dimen/space_06dp"
            android:text="@string/continue_btn_text"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>